--- a/packages/web/src/components/product-card/product-image/index.module.scss
+++ b/packages/web/src/components/product-card/product-image/index.module.scss
@@ -71,7 +71,7 @@
 @media screen and (max-width: $breakpoint-xxs) {
   .product-card {
     &__image {
-      @include ui-w(130px);
+      @include ui-w(120px);
       @include ui-h-full;
     }
   }
