--- a/packages/web/src/components/shopping-cart-drawer/index.module.scss
+++ b/packages/web/src/components/shopping-cart-drawer/index.module.scss
@@ -17,3 +17,9 @@
     border-top-right-radius: 24px;
   }
 }
+
+@media (max-width: $breakpoint-md) {
+  .shopping-cart-drawer {
+    @include ui-p-9;
+  }
+}
